--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Agenda Desa</title>
-</head>
+    <title>AgenDes</title>
+  </head>
 
-<body>
-  <h1>Agenda Desa</h1>
-</body>
+  <body>
+    <a href="#maincontent" class="skip-link">Skip to Content</a>
 
+    <header class="header">
+      <a href="/"><img src= "../public/logo.png" alt="AgenDes" class="header__image" /></a>
+  
+      <input class="menu-btn" type="checkbox" id="menu-btn" />
+    <label class="menu-icon" for="menu-btn"><span class="navicon"></span>
+    </label>
+  
+    <ul class="menu" id="menu">
+      <li>
+        <li><a class="nav__item" href="/">Beranda</a></li>
+        <li><a class="nav__item" href="#/agenda-kegiatan">Agenda</a></li>
+        <li><a class="nav__item" href="#/riwayat-agenda">Riwayat</a></li>
+        <li><a class="nav__item" href="#/tentang">Tentang</a></li>
+      </ul>
+  </body>
 </html>
