add navbar admin

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,7 @@
     <a href="#maincontent" class="skip-link">Skip to Content</a>
 
     <header class="header">
-      <a href="/"><img src= "../public/logo.png" alt="AgenDes" class="header__image" /></a>
+      <a href="/"><img src="../public/logo.png" alt="AgenDes" class="header__image" /></a>
   
       <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span>
@@ -24,6 +24,7 @@
         <li><a class="nav__item" href="#/agenda-kegiatan">Agenda</a></li>
         <li><a class="nav__item" href="#/riwayat-agenda">Riwayat</a></li>
         <li><a class="nav__item" href="#/tentang">Tentang</a></li>
+        <li><a class="nav__itemadmn" href="#/admin">Admin</a></li>
       </ul>
   </body>
 </html>
