--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -196,6 +196,17 @@ hr {
   text-align: center;
 }
 
+.nav__itemadmn {
+  color: #ffffff;
+  background-color: #2c79c6;
+  font-weight: bold;
+  transition: ease 0.5s;
+  padding: 15px;
+  display: inline-block;
+  border-radius: 25px;
+  text-align: center;
+}
+
 .nav__item:hover,
 .nav__item:active,
 .nav__item.active {
@@ -227,7 +238,7 @@ hr {
   position: absolute;
   top: -40px;
   left: 0;
-  background-color: #4c7031;
+  background-color: #2c79c6;
   color: whitesmoke;
   padding: 8px;
   z-index: 100;
