--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,10 +9,10 @@
   </head>
 
   <body>
-    <a href="#maincontent" class="skip-link">Skip to Content</a>
+    <a href="#maincontent" class="skip-link" tabindex="0">Skip to Content</a>
 
     <header class="header">
-      <a href="/"><img src="../public/logo.png" alt="AgenDes" class="header__image" /></a>
+      <a href="/"><img src="logo.png" alt="AgenDes" class="header__image" /></a>
   
       <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span>
