--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,28 +3,64 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
     <title>AgenDes</title>
   </head>
 
   <body>
-    <a href="#maincontent" class="skip-link">Skip to Content</a>
+    <a href="#maincontent" class="skip-link" tabindex="0">Skip to Content</a>
 
     <header class="header">
-      <a href="/"><img src="../public/logo.png" alt="AgenDes" class="header__image" /></a>
-  
+      <a href="/"><img src="logo.png" alt="AgenDes" class="header__image" /></a>
+
       <input class="menu-btn" type="checkbox" id="menu-btn" />
-    <label class="menu-icon" for="menu-btn"><span class="navicon"></span>
-    </label>
-  
-    <ul class="menu" id="menu">
-      <li>
+      <label class="menu-icon" for="menu-btn"><span class="navicon"></span> </label>
+
+      <ul class="menu" id="menu">
+        <li></li>
         <li><a class="nav__item" href="/">Beranda</a></li>
         <li><a class="nav__item" href="#/agenda-kegiatan">Agenda</a></li>
         <li><a class="nav__item" href="#/riwayat-agenda">Riwayat</a></li>
         <li><a class="nav__item" href="#/tentang">Tentang</a></li>
         <li><a class="nav__itemadmn" href="#/admin">Admin</a></li>
       </ul>
-  </body>
+    </header>
+
+    <footer>
+      <div class="footer-container">
+        <div class="identitas_footer">
+          <img class="logo_footer" src="logo_white.png" alt="Logo" />
+          <div class="deskripsi_footer">
+            <p>
+              AgenDes adalah platform informasi yang memungkinkan masyarakat untuk mencari informasi detail mengenai agenda desa
+              yang akan dilaksanakan.
+            </p>
+            <p class="copyright">Hak Cipta &copy; 2023 AgenDes</p>
+          </div>
+        </div>
+        <div class="footer-links">
+          <ul>
+            <li><a href="/">Beranda</a></li>
+            <li><a href="#/agenda-kegiatan">Agenda</a></li>
+            <li><a href="#/riwayat-agenda">Riwayat</a></li>
+            <li><a href="#/tentang">Tentang</a></li>
+            <li><a href="#/admin">Admin</a></li>
+          </ul>
+        </div>
+        <div class="social-media">
+          <p>Kunjungi Media Sosial Kami</p>
+          <a href="#" class="social-icon"><i class="fa fa-facebook" /></a>
+          <a href="#" class="social-icon"><i class="fa fa-twitter" /></a>
+          <a href="#" class="social-icon"><i class="fa fa-instagram" /></a>
+        </div>
+      </div>
+    </footer>
+     
+  </body>
 </html>
