--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -250,3 +250,74 @@ hr {
 .skip-link:focus  {
     top: 0;
 }
+
+/* footer */
+
+footer {
+  margin-top: 50px;
+  background-color: #2c79c6;
+  color: #fff;
+  width: 100%;
+}
+
+.footer-container {
+  width: 100%;
+  padding: 50px 100px 50px 100px;
+}
+
+.logo_footer {
+  height: 65px;
+}
+
+.footer-links li {
+  list-style-type: none;
+  background-color: #2c79c6;
+}
+.footer-links ul {
+  list-style-type: none;
+  background-color: #2c79c6;
+}
+
+.footer-links li a {
+  text-decoration: none;
+  color: #ffffff;
+  margin-bottom: 10px;
+}
+
+.footer-links ul li a:hover {
+  color: #395220;
+  transition: 0.5s;
+}
+
+.social-media,
+.footer-links {
+  margin-top: 25px;
+}
+
+.social-icon {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background-color: #fff;
+  color: #453c3c;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 40px;
+  margin-right: 10px;
+  margin-top: 15px;
+  transition: background-color 0.3s ease;
+}
+
+.social-icon:hover {
+  background-color: #555;
+}
+
+.social-icon i {
+  font-size: 18px;
+}
+
+.copyright,
+.deskripsi_footer {
+  margin-top: 15px;
+  width: 70%;
+}
